change levels and fix design problems

--- a/fromBeggining.html
+++ b/fromBeggining.html
@@ -19,16 +19,17 @@
       text-align: center;
       padding: 20px;
       border: 1px solid #dee2e6;
-      border-radius: 10px;
+      border-radius: 20px;
       background-color: #fff;
       box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-      width: 400px;
+      width: 450px;
     }
 
     .expression {
       font-size: 35px; /* Adjust the font size as needed */
       /* margin-bottom: 10px; */
       user-select: none; /* Prevent text selection */
+      margin-top: 1%;
     }
 
     #scores {
@@ -95,17 +96,16 @@
     ['0 × 0 × 0',	'!0 × 0 × !0',	'!0 × !0 × !0',	'0 × 0 × 1',	'!0 × !0 × 1',	'!0 × !0 × !1',	'0 × 1 × 0',	'!0 × 1 × !0',	'!0 × 1 × 0',	'0 × 1 × 1',	'!0 × 1 × 1',	'!0 × 1 × !1',	'1 × 0 × 0',	'1 × !0 × !0',	'!1 × !0 × 0',	'1 × 0 × 1',	'1 × !0 × 1',	'!1 × !0 × 1',	'1 × 1 × 0',	'1 × 1 × !0',	'!1 × 1 × !0',	'1 × 1 × 1',	'!1 × 1 × 1',	'1 × 1 × !1',	'!0 × 0 × !0',	'0 × !0 × 0',	'!0 × !0 × !0',	'!0 × 0 × 1',	'!0 × !0 × 1',	'!0 × !0 × !1',	'0 × 1 × 0',	'!0 × 1 × !0',	'!0 × 1 × 0',	'0 × 1 × 1',	'!0 × 1 × 1',	'0 × 1 × !1',	'1 × 0 × 0',	'1 × !0 × !0',	'1 × 0 × !0',	'1 × 0 × 1',	'1 × !0 × 1',	'!1 × !0 × 1',	'1 × 1 × 0',	'1 × 1 × !0',	'!1 × 1 × !0',	'1 × 1 × 1',	'!1 × 1 × 1',	'1 × 1 × !1',	'0 × 0 + 0',	'0 × 0 + !0',	'!0 × !0 + 0',	'!0 × 0 + 0',	'0 × !0 + !0',	'0 × !0 + 0',	'0 × 0 + 1',	'!0 × !0 + !1',	'0 × !0 + 1',	'0 × !0 + !1',	'!0 × 0 + !1',	'0 × 0 + !1',	'0 × 1 + 0',	'0 × !1 + 0',	'!0 × !1 + 0',	'!0 × 1 + 0',	'0 × 1 + !0',	'0 × !1 + !0',	'0 × 1 + 1',	'0 × !1 + 1',	'!0 × 1 + !1',	'0 × 1 + !1',	'0 × !1 + !1',	'!0 × !1 + !1',	'1 × 0 + 0',	'!1 × 0 + 0',	'!1 × !0 + 0',	'1 × 0 + !0',	'1 × !0 + 0',	'!1 × 0 + !0',	'1 × 0 + 1',	'!1 × 0 + 1',	'1 × !0 + !1',	'1 × 0 + !1',	'!1 × !0 + !1',	'!1 × 0 + !1',	'1 × 1 + 0',	'1 × !1 + !0',	'!1 × !1 + !0',	'1 × !1 + 0',	'!1 × 1 + 0',	'!1 × !1 + 0',	'1 × 1 + 1',	'1 × 1 + !1',	'!1 × 1 + 1',	'1 × !1 + !1',	'!1 × 1 + !1',	'!1 × !1 + !1',	'0 + 0 × 0',	'!0 + 0 × 0',	'0 + !0 × !0',	'0 + !0 × 0',	'!0 + 0 × !0',	'0 + 0 × !0',	'1 + 0 × 0',	'!1 + !0 × !0',	'1 + 0 × !0',	'!1 + 0 × !0',	'!1 + !0 × 0',	'!1 + 0 × 0',	'0 + 0 × 1',	'0 + 0 × !1',	'0 + !0 × !1',	'0 + !0 × 1',	'!0 + 0 × 1',	'!0 + 0 × !1',	'1 + 0 × 1',	'1 + 0 × !1',	'!1 + !0 × 1',	'!1 + 0 × 1',	'!1 + 0 × !1',	'!1 + !0 × !1',	'0 + 1 × 0',	'0 + !1 × 0',	'0 + !1 × !0',	'!0 + 1 × 0',	'0 + 1 × !0',	'!0 + !1 × 0',	'1 + 1 × 0',	'1 + !1 × 0',	'!1 + 1 × !0',	'!1 + 1 × 0',	'!1 + !1 × !0',	'!1 + !1 × 0',	'0 + 1 × 1',	'!0 + 1 × !1',	'!0 + !1 × !1',	'0 + 1 × !1',	'0 + !1 × 1',	'0 + !1 × !1',	'1 + 1 × 1',	'!1 + 1 × 1',	'1 + !1 × 1',	'!1 + 1 × !1',	'!1 + !1 × 1',	'!1 + !1 × !1'],
     ['0 × 0 × 0',	'!0 × 0 × !0',	'!0 × !0 × !0',	'0 × 0 × 1',	'!0 × !0 × 1',	'!0 × !0 × !1',	'0 × 1 × 0',	'!0 × 1 × !0',	'!0 × 1 × 0',	'0 × 1 × 1',	'!0 × 1 × 1',	'!0 × 1 × !1',	'1 × 0 × 0',	'1 × !0 × !0',	'!1 × !0 × 0',	'1 × 0 × 1',	'1 × !0 × 1',	'!1 × !0 × 1',	'1 × 1 × 0',	'1 × 1 × !0',	'!1 × 1 × !0',	'1 × 1 × 1',	'!1 × 1 × 1',	'1 × 1 × !1',	'!0 × 0 × !0',	'0 × !0 × 0',	'!0 × !0 × !0',	'!0 × 0 × 1',	'!0 × !0 × 1',	'!0 × !0 × !1',	'0 × 1 × 0',	'!0 × 1 × !0',	'!0 × 1 × 0',	'0 × 1 × 1',	'!0 × 1 × 1',	'0 × 1 × !1',	'1 × 0 × 0',	'1 × !0 × !0',	'1 × 0 × !0',	'1 × 0 × 1',	'1 × !0 × 1',	'!1 × !0 × 1',	'1 × 1 × 0',	'1 × 1 × !0',	'!1 × 1 × !0',	'1 × 1 × 1',	'!1 × 1 × 1',	'1 × 1 × !1',	'0 × 0 + 0',	'0 × 0 + !0',	'!0 × !0 + 0',	'!0 × 0 + 0',	'0 × !0 + !0',	'0 × !0 + 0',	'0 × 0 + 1',	'!0 × !0 + !1',	'0 × !0 + 1',	'0 × !0 + !1',	'!0 × 0 + !1',	'0 × 0 + !1',	'0 × 1 + 0',	'0 × !1 + 0',	'!0 × !1 + 0',	'!0 × 1 + 0',	'0 × 1 + !0',	'0 × !1 + !0',	'0 × 1 + 1',	'0 × !1 + 1',	'!0 × 1 + !1',	'0 × 1 + !1',	'0 × !1 + !1',	'!0 × !1 + !1',	'1 × 0 + 0',	'!1 × 0 + 0',	'!1 × !0 + 0',	'1 × 0 + !0',	'1 × !0 + 0',	'!1 × 0 + !0',	'1 × 0 + 1',	'!1 × 0 + 1',	'1 × !0 + !1',	'1 × 0 + !1',	'!1 × !0 + !1',	'!1 × 0 + !1',	'1 × 1 + 0',	'1 × !1 + !0',	'!1 × !1 + !0',	'1 × !1 + 0',	'!1 × 1 + 0',	'!1 × !1 + 0',	'1 × 1 + 1',	'1 × 1 + !1',	'!1 × 1 + 1',	'1 × !1 + !1',	'!1 × 1 + !1',	'!1 × !1 + !1',	'0 + 0 × 0',	'!0 + 0 × 0',	'0 + !0 × !0',	'0 + !0 × 0',	'!0 + 0 × !0',	'0 + 0 × !0',	'1 + 0 × 0',	'!1 + !0 × !0',	'1 + 0 × !0',	'!1 + 0 × !0',	'!1 + !0 × 0',	'!1 + 0 × 0',	'0 + 0 × 1',	'0 + 0 × !1',	'0 + !0 × !1',	'0 + !0 × 1',	'!0 + 0 × 1',	'!0 + 0 × !1',	'1 + 0 × 1',	'1 + 0 × !1',	'!1 + !0 × 1',	'!1 + 0 × 1',	'!1 + 0 × !1',	'!1 + !0 × !1',	'0 + 1 × 0',	'0 + !1 × 0',	'0 + !1 × !0',	'!0 + 1 × 0',	'0 + 1 × !0',	'!0 + !1 × 0',	'1 + 1 × 0',	'1 + !1 × 0',	'!1 + 1 × !0',	'!1 + 1 × 0',	'!1 + !1 × !0',	'!1 + !1 × 0',	'0 + 1 × 1',	'!0 + 1 × !1',	'!0 + !1 × !1',	'0 + 1 × !1',	'0 + !1 × 1',	'0 + !1 × !1',	'1 + 1 × 1',	'!1 + 1 × 1',	'1 + !1 × 1',	'!1 + 1 × !1',	'!1 + !1 × 1',	'!1 + !1 × !1'],
     [],
-    [],
     []
   ];
 
-  const expressionsPerLevel = [1, 1, 1, 1, 1, 2, 3, 3, 3, 4];
+  const expressionsPerLevel = [1, 1, 1, 1, 1, 2, 3, 3, 4];
 
   let currentLevel = 1;
   let localScore = 0;
   let globalScore = 0;
   let wrongAnswersInLevel = 0;
-  const scoresNeededForLevelUp = 2;
+  const scoresNeededForLevelUp = 4;
 
   function generateRandomExpression(expressionLength, hasBrackets) {
     let variables = [];
@@ -178,7 +178,7 @@
       }
     } else if (currentLevel === 8) {
       let expressionLength = 4;
-      let expressionHasBrackets = false;
+      let expressionHasBrackets = true;
       for (let i = 0; i < numExpressionsToShow; i++) {
         expressions.push(generateRandomExpression(expressionLength, expressionHasBrackets));
       }
